<resources>
    <string name="app_name">SmartMask</string>
    <string name="Temperature">温度</string>
    <string name="AQI">空气质量指数</string>
    <string name="Airpressure">气压</string>
    <string name="Alcohol">酒精含量</string>
    <string name="UsingTime">佩戴时长</string>
    <string name="Motor">马达状态</string>
    <string name="Fan">小风扇状态</string>
    <string name="StopShake">停止震动</string>
    <string name="StopFan">停止吹风</string>
    <string name="Shake">震动开始</string>
    <string name="FanStart">风扇启动</string>

    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
